<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ik.bakingapp.recipeDetail.RecipeDetailListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>
