<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ik.bakingapp.recipeList.RecipeListFragment">

    <TextView
        android:id="@+id/tv_network_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="gone"
        tools:text="Error Loading Data. Try again later" />

    <GridView
        android:id="@+id/gv_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="1"
        />

    <ProgressBar
        android:id="@+id/pb_loading_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
